--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,20 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+.container {
+  margin-top: 5%;
+}
+
+canvas {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:-1;
+}
+
+section {
+  margin-top: 50px;
+}
