Changes to styles

--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,8 @@ canvas {
 section {
   margin-top: 50px;
 }
+/* Modify the background color */
+.navbar-custom {
+  background-color: lightgreen;
+}
+
