--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-.container {
-  margin-top: 5%;
-}
-
 canvas {
   position:absolute;
   top:0;
@@ -18,11 +14,6 @@ canvas {
   z-index:-1;
 }
 
-section {
-  margin-top: 50px;
+.rounded-pill {
+  background-color: #ffee00;
 }
-/* Modify the background color */
-.navbar-custom {
-  background-color: lightgreen;
-}
-
